[package]

name = "rsedis"
version = "0.0.1"
authors = [ "Sebastian Waisbrot <seppo0010@gmail.com>" ]
exclude = [
    ".gitignore",
    ".travis.yml",
]

[[bin]]

name = "rsedis"

[dependencies.config]
path = "config"

[dependencies.util]
path = "util"

[dependencies.parser]
path = "parser"

[dependencies.response]
path = "response"

[dependencies.database]
path = "database"

[dependencies.command]
path = "command"

[dependencies.networking]
path = "networking"
