[package]
name = "command"
version = "0.1.0"
authors = ["Sebastian Waisbrot <seppo0010@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2"
compat = { path = "../compat" }
config = { path = "../config" }
database = { path = "../database" }
logger = { path = "../logger" }
parser = { path = "../parser" }
response = { path = "../response" }
util = { path = "../util" }
