[package]
authors = ["Sebastian Waisbrot <seppo0010@gmail.com>"]
name = "database"
version = "0.1.0"

[dependencies]
crc64 = "0.2.2"
rand = "0.3"
rehashinghashmap = "0.1.0"

[dependencies.skiplist]
path = "../rust-skiplist"
features = ["unstable"]

[dependencies.basichll]
branch = "new-features"
git = "https://github.com/seppo0010/hll.rs.git"

[dependencies.config]
path = "../config"

[dependencies.logger]
path = "../logger"

[dependencies.parser]
path = "../parser"

[dependencies.persistence]
path = "../persistence"

[dependencies.rdbutil]
path = "./rdbutil"

[dependencies.response]
path = "../response"

[dependencies.util]
path = "../util"
