[package]
name = "networking"
version = "0.1.0"
authors = ["Sebastian Waisbrot <seppo0010@gmail.com>"]
edition = "2018"

[dependencies.config]
path = "../config"

[dependencies.logger]
path = "../logger"

[dependencies.util]
path = "../util"

[dependencies.parser]
path = "../parser"

[dependencies.response]
path = "../response"

[dependencies.database]
path = "../database"

[dependencies.command]
path = "../command"

[dependencies]
net2 = { version = "0.2.2", features = ["nightly"] }

[target.x86_64-unknown-linux-gnu.dependencies]
fork = "0.1"
unix_socket = "0.4.3"

[target.x86_64-apple-darwin.dependencies]
fork = "0.1"
unix_socket = "0.4.3"
