[package]

name = "skiplist"
version = "0.2.10"
authors = ["JP-Ellis <josh@jpellis.me>"]

description = "Skiplist implementation in rust, providing fast insertion and removal.  A normal skiplist is implemented, as well as an ordered skiplist and a skipmap."

documentation = "http://www.jpellis.me/rust-skiplist/skiplist/"
homepage = "http://www.jpellis.me/projects/rust-skiplist/"
repository = "https://www.github.com/JP-Ellis/rust-skiplist/"

readme = "README.md"

keywords = ["collection", "skiplist", "sorted"]

license = "MIT"

[features]

unstable = []

[dependencies]

rand = "^0.3.12"
